--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
-    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
+    "serve": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
     "dev:db": "cross-env NODE_ENV=dev ./db/mysql.js",
     "prd": "cross-env NODE_ENV=production pm2 start --name admin bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
